

21/4/17:
1)Add two columns: user_last_location and time_last_seen_at_location to the mysql database
https://developers.google.com/maps/documentation/geocoding/web-service-best-practices#BuildingURLs
https://developers.google.com/maps/documentation/geocoding/intro
2) Insert default values into location table as soon as the user signs up so that user is remains in the table